--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atom-numbers",
   "main": "./lib/atom-numbers",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Atom numbers tools",
   "keywords": [
     "numbers",
@@ -14,6 +14,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
